--- a/up-work-client/public/index.html
+++ b/up-work-client/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"/>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <title>Upwork App</title>
+    <title>Jobsomely App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
